# code-star-cli

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: black.yml  cd.yml  ci.yml  ruff.yml
code_star_cli/: __init__.py  __main__.py  app.py  main.py
code_star_cli/commands/: __init__.py  ai.py  chat.py  completions.py  document.py  enhance.py  review.py  scan.py  test.py
